# sales-agent-evaluation-bench

./: .gitignore  README.md  audit_memo.md  contamination_report.json  cost_log.json  datasheet.md  inter_rater_agreement.md  main.py  methodology.md  methodology_rationale.md  model_card.md  pipeline_run.jsonl  pyproject.toml  schema.json  scoring_evaluator.py
ablations/: ablation_results.json  run_ablations.py
generation_scripts/: agreement_report.json  build_dataset.py  build_training_data.py  contamination_check.py  cost_tracker.py  judge_filter_log.jsonl  pipeline_logger.py  router_config.json  seed_counts.json
generation_scripts/multi_llm_synthesis/: __init__.py  bulk_variation.py  dedup.py  judge_filter.py  seed_generator.py
synthesis_memos/: memo_contamination_chen2025.md  memo_datasheets_gebru2021_pushkarna2022.md  memo_dpo_rafailov2023.md  memo_llm_as_judge_gu2024.md  memo_orpo_simpo_preference_methods.md  memo_preference_leakage_li2025.md  memo_prometheus2_kim2024.md  memo_synthetic_data_liu2024.md
tenacious_bench_v0.1/: dev.jsonl  held_out.jsonl  manifest.json  train.jsonl
training/: hyperparams.json  train_orpo.ipynb
training_data/: generation_report.json  orpo_pairs.jsonl
